Hack4Impact Submission

--- a/Header.html
+++ b/Header.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-
 <html> 
+
     <Head>
-        <Title> Phan Web </Title>
-    </Head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <title attribute = "resumeTitle"> Resume </title>
+                <link rel="stylesheet" href="styles.css" />  
+    </Head> 
 
-        <body>
-            <nav class = "Nav Bar">   </nav>
-                <main>
-                    <h1 class = "nostyle"> <tag attribute = "Title: "> <strong> Header </strong> </tag> </h1>
-                    <h2> Basics </h2>
-                    <h3> Header 3 </h3>
-                    <h4> Header 4 </h4>
-                    <h5> Header 5 </h5>
-                    <h6> Final Header </h6>
-                </main>
+    <body>
+        <nav id="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>   
+        
+        <main>
+            <h1 class = "nostyle"> <tag attribute = "Title: "> <strong> Header </strong> </tag> </h1>
+            <h2> Basics </h2>
+            <h3> Header 3 </h3>
+            <h4> Header 4 </h4>
+            <h5> Header 5 </h5>
+            <h6> Final Header </h6>
+        </main>
 
-            <footer class = "Footer"> © 2023 <Personal Website Name> | All Rights Reserved </footer>
-        </body>
-
+    <footer class = "Footer"> © 2023 <Personal Website Name> | All Rights Reserved </footer>
+    </body>
 </html>
