--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
         <main class="container">
             <section class="about">
                 <div class="about-image">
-                    <img src="images/matcha.jpg" alt="matcha" />
+                    <img src="images/matcha.JPG" alt="matcha" />
                 </div>
                 <div class="about-text">
                     <p class="body"> Here is my attempt to recreate the Matcha Einspänners I have tried at the cafes I have visited in Los Angeles! <br>
