--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 
                 <ul id="recipe" style="display:none; margin-top: 10px; padding: 10px; background-color: #f9f9f9; border-radius: 8px;">
                     <li> 1 tsp matcha powder </li>
-                    <li></li>
+                    <li> Milk </li>
                     <li></li>
                     <li></li>
                     <li></li>
