--- a/blog.html
+++ b/blog.html
@@ -52,11 +52,10 @@
                 </button>
 
                 <ul id="recipe" style="display:none; margin-top: 10px; padding: 10px; background-color: #f9f9f9; border-radius: 8px;">
-                    <li> 1 tsp matcha powder </li>
-                    <li> Milk </li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li> 3 grams of matcha powder </li>
+                    <li> 162 degrees Hot water + Wisk until foamy </li>
+                    <li> Empty Cup + 12 grams of Simple Syrup + Ice Cube </li>
+                    <li> 100 grams of Chobani Oat Milk + Add Matcha on top</li>
                 </ul>
             </section>
         </main> 
