--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <main>
             <h2 class="center"> <u> Attached Below is my Resume: </u></h2>
                 <div class="pdf-container">
-                    <iframe src="Matthew Phan CS Resume (Updating)-2.pdf"></iframe>
+                    <iframe src="images/Matthew Phan CS Resume (Updating)-3.pdf"></iframe>
                 </div>
         </main>
      
