--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
                     <li> 3 grams of matcha powder </li>
                     <li> 162 degrees Hot water + Wisk until foamy </li>
                     <li> Empty Cup + 12 grams of Simple Syrup + Ice Cube </li>
-                    <li> 100 grams of Chobani Oat Milk + Add Matcha on top</li>
+                    <li> 100 grams of Chobani Oat Milk + Add finished Matcha on top</li>
                 </ul>
             </section>
         </main> 
